objects/VisitOps__CSVHeaderForAttendees__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CSVHeaderForAttendees</description>
    <fields>
        <fullName>VisitOps__API_Name__c</fullName>
        <description>API Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Additional_Details__c</fullName>
        <description>Additional Details</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsMandatory</description>
        <label>IsMandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Order_No__c</fullName>
        <description>Order No</description>
        <label>Order No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Restrict_Picklist_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict Picklist Value</description>
        <label>Restrict Picklist Value</label>
        <type>Checkbox</type>
    </fields>
    <label>CSVHeaderForAttendees</label>
</CustomObject>